[project]
name = "mcp-lookup"
version = "0.5.2"
description = "Lookup MCP servers in the official MCP Registry by name or URL."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Sumit Badsara", email = "sumit@unboundsecurity.ai" }]
requires-python = ">=3.9"
keywords = ["mcp", "model-context-protocol", "registry", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/websentry-ai/mcp-lookup"
Repository = "https://github.com/websentry-ai/mcp-lookup"
Issues = "https://github.com/websentry-ai/mcp-lookup/issues"

[project.scripts]
mcp-lookup = "mcp_lookup.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_lookup*"]
